# scriptml-bot

./: .attribute_cache.json  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_CONTEXT.md  APP_FLOW.md  CLIP_FIX_COMPARISON.md  CLIP_IMPLEMENTATION_SUMMARY.md  CLIP_UPLOAD_VALIDATION_REPORT.md  CLIP_VALIDATION_DELIVERABLES.txt  CLIP_VALIDATION_INDEX.md  CLIP_VALIDATION_SUMMARY.md  COMPLETE_DETAILED_TABLE.md  COMPLETE_IMPORT_ANALYSIS.md  DETAILED_IMPORT_REPORT.md  FINAL_IMPORT_ANALYSIS_REPORT.md  IMPORT_ANALYSIS_COMPLETE.md  IMPORT_ANALYSIS_REPORT.md  README.md  RUFF_LINTING_REPORT.md  RUFF_QUICK_FIX_GUIDE.md  TYPE_SAFETY_INTEGRATION_GUIDE.md  TYPE_SAFETY_REVIEW_CLIPS.md  analyze_imports.py  attributes.py  auth.py  check_auth_detail.py  check_circular.py  complete_analysis.py  comprehensive_import_analysis.py  detailed_check.py  detailed_import_analysis.py  error_collector.py  excel_converter.py  feedback_log.json  final_analysis.py  final_report.py  llms.txt  main.py  (+8 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/agents/: code-review-agent.md  mercadolivre-docs-agent.md  pr-engineer-agent.md
.github/workflows/: quality-gates.yml
AGENTSMD/: ANALISE_ARQUITETURA.md  ANALISE_COMPLETA.md  APP_FLOW.md  PLANO_PRODUCAO_10_10.md  RELATORIO_FINAL.md
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
auth/: __init__.py  authenticator.py
cache/categories/: MLB437616.json
config/: attribute_rules.yaml  fiscal_config.yaml  generic_mappings.yaml  header_detection.yaml  publisher.example.yaml  seller.example.dev.yaml  seller.example.yaml  shipping.yaml  standard_fields.yaml
docs/adr/: 0001-repo-architecture.md  0002-legacy-shim-removal.md  0003-json-payload-publisher.md  0004-seller-policy-validation-layer.md  0005-synchronous-only-execution-model.md
mercadolivre_upload/: __init__.py  __main__.py  cli.py.bak  main.py  pipeline.py
mercadolivre_upload/adapters/: __init__.py  async_image_uploader.py  clip_uploader.py  image_uploader.py  json_payload_reader.py
mercadolivre_upload/adapters/spreadsheet/: __init__.py  dynamic_parser.py  excel_parser.py  exceptions.py  header_detector.py  models.py  parser.py
mercadolivre_upload/api/: __init__.py  async_client.py  category_adapter.py  category_resolver.py  cbt_extractor.py  client.py  exceptions.py  mock_client.py
mercadolivre_upload/api/domains/: __init__.py  categories.py  fiscal.py  items.py  media.py
mercadolivre_upload/application/: __init__.py  attribute_builder.py  policy_snapshot.py  ports.py  publish_json_use_case.py  publish_payload.py  publish_payload_use_case.py  publish_product.py  publish_product_category.py  publish_product_flow.py  publish_product_identifier.py  publish_product_preflight.py  publish_product_shipping.py  publish_product_validation.py  results.py  shipping_policy.py
mercadolivre_upload/application/builders/: __init__.py  attribute_builder.py  picture_builder.py  product_builder.py  shipping_builder.py  variation_builder.py
mercadolivre_upload/application/publish/: __init__.py
mercadolivre_upload/application/validators/: __init__.py  seller_policy.py
mercadolivre_upload/auth/: __init__.py  authenticator.py  exceptions.py  oauth.py  publisher_context.py  secure_storage.py  token_manager.py
mercadolivre_upload/cli/: __init__.py  app.py
mercadolivre_upload/cli/commands/: __init__.py  batch_reporting.py  cache_cmd.py  common.py  doctor.py  publish_batch.py  publish_json.py  publish_manifest.py  publish_runtime.py  upload.py  upload_reporting.py  validate.py
mercadolivre_upload/compat/: __init__.py  auth_exports.py  entrypoints.py
mercadolivre_upload/contracts/: __init__.py  run_manifest.py  run_manifest.schema.json
mercadolivre_upload/domain/: __init__.py  attribute_classifier.py  attribute_mapper.py  attribute_metadata.py  cache_attribute_mapper.py  cache_attribute_mapper_helpers.py  smart_mapper.py  text_normalizer.py  types.py
mercadolivre_upload/infrastructure/: __init__.py  config.py  env.py  http.py  logging.py  metrics.py  metrics_helpers.py  migration.py  observability.py
mercadolivre_upload/parser/: __init__.py  dynamic_parser.py  excel_parser.py  models.py
mercadolivre_upload/shared/: app_settings.py
mercadolivre_upload/tools/: __init__.py  preflight_gather.py
mercadolivre_upload/utils/: __init__.py  errors.py  text.py
ml_app_settings/: __init__.py  loader.py  models.py
scripts/: debug_headers.py  export_livros_info.py  upload_fiscal_info.py
tests/: __init__.py  cli_report_builders.py  conftest.py  test_api_client.py  test_api_validation_repair.py  test_architecture_contract.py  test_async_image_uploader.py  test_attribute_builder.py  test_attribute_cache.py  test_auth.py  test_authenticator.py  test_category_adapter.py  test_category_resolver_module.py  test_cbt_extractor.py  test_cli.py  test_clip_uploader.py  test_config_consolidation.py  test_domain_category_resolver.py  test_fiscal.py  test_fiscal_data_validation.py  test_fiscal_service.py  test_header_detector.py  test_http_client.py  test_image_uploader.py  test_infrastructure_import.py  test_infrastructure_logging.py  test_item_id_validation.py  test_json_payload_reader.py  test_main.py  test_mercado_livre_validation_classifier.py  test_migration_schema_version.py  test_no_builder_dependency.py  test_oauth_config_resolution.py  test_observability.py  test_observability_alerts_dashboard.py  test_observability_logger_metrics.py  test_observability_manager.py  test_parser.py  test_picture_builder.py  test_policy_snapshot.py  (+55 more)
tests/support/: __init__.py  upload_alignment.py  validate_usecase_mode.py
(+59 files in other folders)
