[project]
name = "scriptml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.0.0",
    "pandas>=1.5.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.28.0",
]
